--- a/config.env
+++ b/config.env
@@ -2,8 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_xiaomi_msm8953
 KERNEL_SOURCE_BRANCH=lineage-21
-KERNEL_CONFIG=msm8953-perf_defconfig && sed -i 's/CONFIG_CC_STACKPROTECTOR_STRONG=y/CONFIG_CC_STACKPROTECTOR_STRONG=n/g' arch/arm64/configs/msm8953-perf_defconfig && echo "CONFIG_CC_STACKPROTECTOR_NONE=y" >> arch/arm64/configs/
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_CONFIG=msm8953-perf_defconfig
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
