--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -178,7 +178,12 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
         git clone https://android.googlesource.com/platform/system/tools/mkbootimg tools -b master-kernel-build-2022 --depth=1
-
+        
+    - name: Fix Compiler Error
+      run: |
+          sed -i 's/CONFIG_CC_STACKPROTECTOR_STRONG=y/CONFIG_CC_STACKPROTECTOR_STRONG=n/g' $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/configs/msm8953-perf_defconfig
+          echo "CONFIG_CC_STACKPROTECTOR_NONE=y" >> $GITHUB_WORKSPACE/kernel_workspace/android-kernel/arch/arm64/configs/msm8953-perf_defconfig
+          
     - name: Download kernel source
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
