--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -191,11 +191,12 @@ jobs:
 
     - name: Fix Compiler Error
       run: |
+        cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        find . -type f -name "Makefile*" -exec sed -i 's/-Werror//g' {} +
         find . -name "msm8953-perf_defconfig" -exec sed -i 's/CONFIG_CC_STACKPROTECTOR_STRONG=y/CONFIG_CC_STACKPROTECTOR_STRONG=n/g' {} +
         find . -name "msm8953-perf_defconfig" -exec sh -c 'echo "CONFIG_CC_STACKPROTECTOR_NONE=y" >> {}' \;
-        find . -name "Makefile" -exec sed -i 's/-Werror//g' {} +
-        find . -name "Makefile" -exec sed -i 's/-implicit-function-declaration//g' {} +
-        find . -name "Makefile" -exec sed -i 's/-unknown-warning-option//g' {} +
+        grep -rl "\-implicit-function-declaration" . | xargs sed -i 's/-implicit-function-declaration//g' || true
+        grep -rl "\-unknown-warning-option" . | xargs sed -i 's/-unknown-warning-option//g' || true
 
     - name: Download source boot image
       if: env.BUILD_BOOT_IMG == 'true'
